mobile width fix carousel margin too wide

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,11 +4,8 @@ html {
 body{
 }
 
-
-
 .panel-default {
      background-color: RGBA(75, 115, 121, 1);
-
 }
 
 .panel-thumbnail {
@@ -17,7 +14,6 @@ body{
   margin-top:15px;
   margin-right: auto;
   margin-left: auto;
-  
 }
 
 .panelStyle {
@@ -29,6 +25,7 @@ body{
   color: white;
   font-size: 12px;
 }
+
 .skipNav{
 padding-top: 75px;
 }
@@ -47,7 +44,6 @@ H2 {
 
 H4 {
   margin-bottom: 15px;
-/*  margin-top:10px;*/
   padding-top:10px;
 }
 
@@ -197,7 +193,6 @@ footer ul {
 .header1{
 background: url(../img/blur.jpg);
 background-repeat: no-repeat;
-/*background-size: 100% 100%;*/
 background-size: cover;
 width:100%;
 height: 100%;
@@ -215,12 +210,12 @@ align-content: center;
 
 .nav-tabs > li > a {
     padding:9px 15px;
-            display:inline-block;
-            border-radius:3px 3px 0px 0px;
-            background:#7FB5DA;
-            font-size:16px;
-            font-weight:600;
-            color:#4c4c4c;
+	display:inline-block;
+	border-radius:3px 3px 0px 0px;
+	background:#7FB5DA;
+	font-size:16px;
+	font-weight:600;
+	color:#4c4c4c;
 }
 
 .nav-tabs > li.active > a,
@@ -301,7 +296,6 @@ body {
     padding: 3px 15px !important;
   }
 }
-
 /*end fixed top nav*/
 
 #nav.affix {
@@ -309,7 +303,6 @@ body {
     top: 0;
     width: 100%
 }
-
 
 #masthead {
 	min-height:150px;
@@ -629,21 +622,6 @@ body {
               box-shadow: 0 2px 10px rgba(0,0,0,.25);
     }
 
-    /* Downsize the brand/project name a bit */
-    /*.navbar .brand {
-      /*padding: 16px 20px 16px; /* Increase vertical padding to match navbar links */
-      /*font-size: 48px;*/
-      /*font-family:'gear_proportionregular';
-      font-weight: bolder;
-      letter-spacing: 5px;
-      margin: 0;
-      margin-bottom: 0px;
-      line-height:20px;*/
-     /* font-size: 16px;
-      font-weight: bold;
-      text-shadow: 0 -1px 0 rgba(0,0,0,.5); 
-    }*/
-
     /* Navbar links: increase padding for taller navbar */
     .navbar .nav > li > a {
       padding: 0px 20px 0px 0px;
@@ -737,9 +715,6 @@ p.lead {
 }
 
 
-    /* RESPONSIVE CSS
-    -------------------------------------------------- */
-
     @media (max-width: 979px) {
 
       .container.navbar-wrapper {
@@ -775,53 +750,26 @@ p.lead {
         max-width: 40%;
         margin: 0 auto 20px;
       }
-      
-      /*.featurette-image.pull-left  {
-        display: block;
-        float: left;
-        max-width: 40%;
-        margin: 0 auto 20px;
-      }
-      .featurette-image.pull-right {
-        display: block;
-        float: right;
-        max-width: 40%;
-        margin: 0 auto 20px;
-      }*/ 
     }
 
 
-    @media (max-width: 767px) {
+ @media (max-width: 767px) {
 
-      .navbar-inner {
-        /*margin: -20px;*/
+     .carousel {
+        margin-left: -15px;
+        margin-right: -15px;
       }
 
-      .carousel {
-        margin-left: -20px;
-        margin-right: -20px;
-      }
-      .carousel .container {
-
-      }
-      .carousel .item {
-        /*height: 300px;*/
-      }
       .carousel img {
         height: 300px;
       }
-      .carousel-caption {
-       /* width: 50%;
-        padding: 0 70px;
-        margin-top: 100px;*/
-      }
+
       .carousel-caption h1 {
         font-size: 30px;
       }
       .carousel-caption .lead,
       .carousel-caption .btn {
         font-size: 18px;
-        /*color: rgb(0, 0, 0);*/
       }
 
       .marketing .span4 + .span4 {
